testsuite/tests/rewriting_errors/invalid_rewriting/test.out
main.adb:3:4: rule violation: Custom rule violation
3 |    goto lbl;   --  FLAG
  |    ^^^^^^^^^

error: Error(s) while applying a rewriting context: [Missing ';' at <3:9-3:12>]
checker.lkql:2:30 in <anonymous>
  2 | analysis_units.map((unit) => node_checker(unit.root)).to_list
    |                              ^^^^^^^^^^^^^^^^^^^^^^^

checker.lkql:2:1 in checker.lkql
  2 | analysis_units.map((unit) => node_checker(unit.root)).to_list
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
